--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/rripley_NextGenerationHero_build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/rripley_NextGenerationHero_build.data.br",
-        frameworkUrl: buildUrl + "/rripley_NextGenerationHero_build.framework.js.br",
-        codeUrl: buildUrl + "/rripley_NextGenerationHero_build.wasm.br",
+        dataUrl: buildUrl + "/rripley_NextGenerationHero_build.data",
+        frameworkUrl: buildUrl + "/rripley_NextGenerationHero_build.framework.js",
+        codeUrl: buildUrl + "/rripley_NextGenerationHero_build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "MP1KelvinSolution",
