--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | MP1KelvinSolution</title>
+    <title>Unity WebGL Player | Next Generation Hero Ronnie & Hanny</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">MP1KelvinSolution</div>
+        <div id="unity-build-title">Next Generation Hero Ronnie & Hanny</div>
       </div>
     </div>
     <script>
@@ -34,7 +34,7 @@
         codeUrl: buildUrl + "/rripley_NextGenerationHero_build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "MP1KelvinSolution",
+        productName: "Next Generation Hero Ronnie & Hanny",
         productVersion: "1.0",
       };
 
